# poli-baselines

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tox-testing-alebo.yml  python-tox-testing-ax.yml  python-tox-testing-baxus.yml  python-tox-testing-bounce.yml  python-tox-testing-lambo2.yml  python-tox-testing-pr.yml  python-tox-testing.yml
examples/00_a_simple_objective_function_registration/: 01_registering_aloha.py  environment.yml
examples/01_a_simple_example_of_optimization/: optimizing_aloha.py
examples/02_adding_smb_as_objective_function/: environment.yml  requirements.txt  smb_objective_function.py
examples/02_optimizing_foldx_stability_using_random_mutations/: random_mutations_3ned_Repair.json  run.py
examples/03_adding_foldx_stability_as_objective_function/: foldx_stability_objective_function.py  requirements.txt
examples/03_line_bo_on_toy_functions/: line_bo_on_ackley.py
examples/04_discrete_nsga_ii_on_toy_problem/: optimizing_aloha_twice.py
examples/04_optimizing_foldx_stability_using_random_mutations/: random_mutations_101m_Repair.json  random_mutations_3ned_Repair.json  run.py
examples/05_discrete_nsga_ii_on_foldx_stability_and_sasa/: history.json  optimizing_foldx_stability_and_sasa.py
examples/05_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/2vad_A/: 2vad_A_Repair.fxout  Average_2vad_A_Repair.fxout  Dif_2vad_A_Repair.fxout
examples/05_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/3rwa_B/: 3rwa_B_Repair.fxout  Average_3rwa_B_Repair.fxout  Dif_3rwa_B_Repair.fxout  Raw_3rwa_B_Repair.fxout  individual_list.txt
examples/05_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/5dtl_I/: Raw_5dtl_I_Repair.fxout  individual_list.txt
examples/05_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/5lk4_A/: 5lk4_A_Repair.fxout  Average_5lk4_A_Repair.fxout  Dif_5lk4_A_Repair.fxout  PdbList_5lk4_A_Repair.fxout  Raw_5lk4_A_Repair.fxout  individual_list.txt
examples/05_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/6aa7_A/: 6aa7_A_Repair.fxout  Average_6aa7_A_Repair.fxout  PdbList_6aa7_A_Repair.fxout  Raw_6aa7_A_Repair.fxout
examples/05_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/7oin_B/: 7oin_B_Repair.fxout  Average_7oin_B_Repair.fxout  Dif_7oin_B_Repair.fxout  Unrecognized_molecules.txt  individual_list.txt
examples/05_optimizing_qed_using_latent_space_bo/: optimizing_qed.py  readme.md  tokens_TINY-CID-SELFIES-20.json  vae.py
examples/06_optimizing_mario_jumps_using_latent_space_bo/: optimizing_jumps.py
examples/06_running_lambo2_on_rasp/: readme.md  run.py  simple_observer.py
examples/07_optimizing_logp_on_chembl/: optimizing_logp_on_latent_space_of_chembl.py  readme.md  vae.py  vocab_chembl.pth
examples/07_running_lambo2_on_ehrlich/: run.py  simple_observer.py
examples/07_running_lambo2_on_foldx/: dnja_foldx_initsamples.npz  readme.md  run.py  simple_observer.py
examples/08_pymoo_nsga_ii_on_foldx/: optimizing_stability_and_sasa.py
examples/09_replicating_nsga_ii_of_lambo/: 02_running_nsga_ii.ipynb  02_running_nsga_ii.py  history.json
examples/09_replicating_nsga_ii_of_lambo_by_hand/: 01_computing_stability_and_sasa.ipynb  02_running_nsga_ii.py  03_analyze_results.py  history.json  initial_pareto_front.csv  initial_stability_and_sasa.csv
examples/10_mutating_lambo_seeds/: readme.md
examples/11_line_bo_on_toy_functions/: line_bo_on_ackley.py
examples/13_discrete_nsga_ii_on_foldx_stability_and_sasa/: history.json  optimizing_foldx_stability_and_sasa.py
examples/13_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/2vad_A/: PdbList_2vad_A_Repair.fxout  Raw_2vad_A_Repair.fxout  individual_list.txt
examples/13_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/3rwa_B/: PdbList_3rwa_B_Repair.fxout
examples/13_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/5dtl_I/: 5dtl_I_Repair.fxout  Average_5dtl_I_Repair.fxout  Dif_5dtl_I_Repair.fxout  PdbList_5dtl_I_Repair.fxout
examples/13_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/6aa7_A/: Dif_6aa7_A_Repair.fxout
examples/13_discrete_nsga_ii_on_foldx_stability_and_sasa/pdbs/7oin_B/: PdbList_7oin_B_Repair.fxout  Raw_7oin_B_Repair.fxout
examples/a_simple_objective_function_registration/: aloha.py  environment.yml  querying_aloha.py  registering_aloha.py
examples/adding_foldx_stability_as_objective_function/: foldx_stability_objective_function.py
examples/adding_smb_as_objective_function/: smb_objective_function.py
examples/notebooks/: calling_registered_black_box_functions.ipynb  optimizing_protein_stability.ipynb
examples/optimizing_foldx_stability_using_random_mutations/: random_mutations_3ned_Repair.json  run.py
src/poli_baselines/baselines/simple/: random_mutation.py
src/poli_baselines/core/: abstract_solver.py  step_by_step_solver.py
src/poli_baselines/core/utils/acquisition/: __init__.py  thompson_sampling.py
src/poli_baselines/core/utils/ax/: ax_solver.py  environment.ax.small.yml  environment.ax.yml  interface.py
src/poli_baselines/core/utils/bo_pr/: get_problem.py  original_license  poli_objective_in_pr.py  run_one_replication.py
src/poli_baselines/core/utils/bounce/: poli_benchmark.py
src/poli_baselines/core/utils/constants/: __init__.py  immutable_tokens.py  inmutable_tokens.py  unmutable_tokens.py
src/poli_baselines/core/utils/mutations/: __init__.py  random_mutations.py
src/poli_baselines/solvers/: __init__.py
src/poli_baselines/solvers/bayesian_optimization/: latent_space_bayesian_optimization.py
src/poli_baselines/solvers/evolutionary_strategies/: __init__.py  cma_es.py  nsga_ii.py
src/poli_baselines/solvers/latent_space/: latent_space_solver.py
src/poli_baselines/solvers/multi_objective/: nsga_ii.py
src/poli_baselines/solvers/simple/: continuous_random_mutation.py  genetic_algorithm.py  random_mutation.py  random_search.py
src/poli_baselines/tests/: test_simple_optimization.py
src/poli_baselines/tests/test_basic_promises/: test_simple_optimization.py
(+100 files in other folders)
