[build-system]
requires = ["setuptools<=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poli-baselines"
version = "0.0.1"
description = "poli-baselines, a library of discrete objective optimizers"
readme = "README.md"
authors = [{name="Miguel González-Duque", email="miguelgondu@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["optimization", "molecular", "discrete", "proteins"]
dependencies = [
    "numpy",
    "rdkit",
    "selfies",
    "pymoo",
    "botorch",
    "cma",
    "poli @ git+https://github.com/MachineLearningLifeScience/poli.git"
]

[project.optional-dependencies]
dev = ["black", "tox", "pytest"]
docs = ["sphinx", "furo"]
lambo2 = ["pytorch-cortex"]

[project.urls]
Homepage = "https://github.com/MachineLearningLifeScience/poli-baselines"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "baxus: marks test that can be run in the BAxUS environment",
    "ax_solvers: marks test that can be run in the Ax environment",
]