[metadata]
name = poli_baselines
version = 1.0.0
author_email = miguelgondu@gmail.com
description = Baselines for Discrete Sequence Optimization, focusing on proteins
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* =
  *.sht
  *.yaml
